[metadata]
name = tekrepodoc
version = attr: repodoc.__version__
description = Utility Tool to Generate Common Project Files using sensible templates every one can agree on. Useful for Git Repositories, Supports Sphinx templates, Community Health Files, READMEs, pypi project configurations.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/TralahM/tekrepodoc
author = Tralah M Brian
author_email = musyoki.brian@tralahtek.com
license = GPLV3
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

project_urls =
    Source = https://github.com/TralahM/tekrepodoc
    Tracker = https://github.com/TralahM/tekrepodoc/issues
    Documentation = https://github.com/TralahM/tekrepodoc

[options]
include_package_data = true
packages = find:
install_requires =

    PyYaml

    jinja2
    shtab
    jinja2-time
    art

[options.extras_require]
docs=
    sphinx
    sphinx-automodapi
[options.entry_points]
console_scripts =

    repodoc = repodoc.commands:main

